# mchps21-cn5

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
Debug/: CMakeCache.txt  CN-TP5.cbp  Makefile  cmake_install.cmake
Debug/src/: Makefile  cmake_install.cmake  dgbmv_ex4  poisson1D_direct
Octave/: Jacobi_Richardson_GaussSeidel_cv.eps  csr_mul.m  csr_script.m  jacobi_richardson_gauss.m  ldlt.m  ldtl_script.m  mylu.m
Release/: CMakeCache.txt  CN-TP5.cbp  Makefile  cmake_install.cmake
Release/src/: Makefile  cmake_install.cmake  poisson1D_direct  test_env
cmake/: blas.cmake
include/: blaslapack_headers.h  poisson1D.h  utils.h
src/: CMakeLists.txt  dgbmv.c  exo_richardson.c  lib_poisson1D.c  tp2_poisson1D_direct.c  tp2_poisson1D_iter.c  tp_env.c  utils.c
src/library_test/: CMakeLists.txt  exo_dgbmv.c  exo_ludecomposition.c
src/poisson1D/: CMakeLists.txt  poisson1D.c  poisson1D_direct.c  poisson1D_gauss_seidel.c  poisson1D_iter.c  poisson1D_jacobi.c
tests/: CMakeLists.txt  dgbmv_test.c
tools/: env_test.c
